--- a/cloud-gateway/cloud-gateway/pom.xml
+++ b/cloud-gateway/cloud-gateway/pom.xml
@@ -70,6 +70,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>cloud-gateway</finalName>
 	</build>
 
 </project>
